# charsi

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  charsi.spec  pyproject.toml
.github/workflows/: codecov.yml  unit-test.yml
src/charsi/: __main__.py  instruction.py  recipe.py  strings.py  utils.py
src/charsi/commands/: __init__.py  imbue.py  make.py
tests/: conftest.py  test_cli.py  test_cmd_imbue.py  test_cmd_make.py  test_instruction.py  test_recipe.py  test_strings.py  test_utils.py
tests/res/: __init__.py  recipe1.recipe
utils/: create_d2txt_db.py  gen_item_alias.py  generate_item_alias.py  update_item_string.py  var_item-varies.py  var_level.py  var_rune_number.py
