[tool.poetry]
name = "charsi"
version = "0.1.0"
description = "A command-line tool to help game modders build string resources for Diablo II: Resurrected."
authors = ["Garrett HE <garrett.he@hotmail.com>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/garrett-he/charsi"
packages = [{include = "charsi", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8,<3.12"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.20.0"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.10.0"

[tool.poetry.scripts]
charsi = "charsi.__main__:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
